<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F17F"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="170dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/aitlogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="387dp"
        android:layout_height="58dp"
        android:fontFamily="serif"
        android:text="@string/department_of_library_and_information"
        android:textAlignment="center"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/usnInp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:background="#EDE7E7"
        android:hint="@string/enter_email"
        android:textColorHint="#B71C1C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwdInp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="294dp"
        android:layout_height="55dp"
        android:background="#EDE7E7"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="#B71C1C"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579" />

    <Button
        android:id="@+id/loginSubBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#176ED4"
        android:text="@string/log_in"
        android:textColor="#FFFF8D"
        app:cornerRadius="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwdInp"
        app:layout_constraintVertical_bias="0.317"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/signUpbtn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:backgroundTint="#F5F17F"
        android:elevation="0sp"
        android:text="@string/sign_up_now"
        android:textColor="#0B0A0A"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwdInp"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/forgotpswdBtn"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:backgroundTint="#F5F17F"
        android:elevation="0sp"
        android:text="@string/forgot_password"
        android:textColor="#0B0A0A"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwdInp"
        app:layout_constraintVertical_bias="0.059" />

    <Button
        android:id="@+id/adminLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#176ED4"
        android:text="@string/admin_login"
        android:textColor="#FFFF8D"
        app:cornerRadius="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSubBtn"
        app:layout_constraintVertical_bias="0.522"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>